fix(테스트 못해봄. window로 해봐야만):

--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ header .container {
   border-radius: .25em;
 }
 
-/* 카톡 화면 */
+/* 카톡 화면 
 
 #secPage .container #txtlog {
   display: inline-block;
@@ -144,3 +144,4 @@ header .container {
 .kTalkBox .kkodate.scd {
   margin-right: 6px;
 }
+*/
