--- a/kakao.css
+++ b/kakao.css
@@ -1,8 +1,8 @@
 
 /* 카톡 화면 */
-
-#secPage .container {
+#txtlog {
   margin: 0 auto;
+  padding: 20px;
   display: none;
   width: 400px;
   height: 700px;;
@@ -12,100 +12,103 @@
   overflow: scroll;
   -ms-overflow-style: none; /* 인터넷 익스플로러 */
   scrollbar-width: none; /* 파이어폭스 */
+  font-weight: 400;
 }
-#secPage .container.show {
+#txtlog.show {
     display: block;
 }
-#secPage .container::-webkit-scrollbar {
+#txtlog::-webkit-scrollbar {
   display: none;
 }
 
-  #secPage .container #txtlog {
-    padding: 20px;
-    font-weight: 400;
-  }
   
-  #txtlog .kTalkBox {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: end;
-    flex-wrap: wrap;
-  }
-  #txtlog .kTalkBox.left {
-    justify-content: left;
-    text-align: left;
-  }
-  #txtlog .kTalkBox.right {
-    justify-content: right;
-    text-align: right;
-  }
+#txtlog .kTalkBox {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: end;
+  flex-wrap: wrap;
+}
+#txtlog .kTalkBox.left {
+  justify-content: left;
+  text-align: left;
+}
+#txtlog .kTalkBox.right {
+  justify-content: right;
+  text-align: right;
+}
+#txtlog .kTalkBox .kkotxtbox {
+  display: flex;
+  align-items: end;
+}
+#txtlog .kTalkBox.right .kkotxtbox {
+  flex-direction: row-reverse;
+}
 
-  /* 날짜 */
-  .kTalkBox .kkodatebox {
-    text-align: center;
-    font-size: 13px;
-    padding: 8px 20px;
-    border-radius: 30px;
-    background-color: rgba(0,0,0,0.05);
-    margin: 40px 0 18px;
-  }
+/* 날짜 */
+.kTalkBox .kkodatebox {
+  text-align: center;
+  font-size: 13px;
+  padding: 8px 20px;
+  border-radius: 30px;
+  background-color: rgba(0,0,0,0.05);
+  margin: 40px 0 18px;
+}
 
-  /* 대화상자 구성요소 */
-  .kTalkBox .kkoname {
-    display: block;
-    width: 100%;
-    margin: 14px 0 10px;
-  }
-  .kTalkBox .kkotxt {
-    position: relative;
-    display: inline-block;
-    max-width:250px;
-    padding: 8px 14px;
-    margin-bottom: 8px;
-    background-color: #fff;
-    border-radius: 12px;
-    line-height: 1.4;
-    word-break: break-all;
-  }
-  .kTalkBox.active .kkotxt:after {
-    content: '';
-    position: absolute;
-    width:0;
-    height:0;
-    border: 20px solid transparent;
-  }
-  .kTalkBox .kkodate {
-    display: inline-block;
-    margin-bottom: 8px;
-    min-width: 56px;
-    font-size: 0.7rem;
-    color: #777777;
-  }
-  
-  
-  .kTalkBox.active.left .kkotxt:after {
-    border-right-color: #fff;
-    top: 8px;
-    left: 12px;
-    border-left: 0;
-    border-top: 0;
-    margin-bottom: -10px;
-    margin-left: -20px;
-  }
-  .kTalkBox.left .kkodate {
-    margin-left: 6px;
-  }
-  
-  .kTalkBox.active.right .kkotxt:after {
-    border-left-color: #fff;
-    top: 8px;
-    right: 12px;
-    border-right: 0;
-    border-top: 0;
-    margin-bottom: -10px;
-    margin-right: -20px;
-  }
-  .kTalkBox.right .kkodate {
-    margin-right: 6px;
-  }
+/* 대화상자 구성요소 */
+.kTalkBox .kkoname {
+  display: block;
+  width: 100%;
+  margin: 14px 0 10px;
+}
+.kTalkBox .kkotxt {
+  position: relative;
+  display: inline-block;
+  max-width:250px;
+  padding: 8px 14px;
+  margin-bottom: 8px;
+  background-color: #fff;
+  border-radius: 12px;
+  line-height: 1.4;
+  word-break: break-all;
+}
+.kTalkBox.active .kkotxt:after {
+  content: '';
+  position: absolute;
+  width:0;
+  height:0;
+  border: 20px solid transparent;
+}
+.kTalkBox .kkodate {
+  display: inline-block;
+  margin-bottom: 8px;
+  min-width: 56px;
+  font-size: 0.7rem;
+  color: #777777;
+}
+
+.kTalkBox.active.left .kkotxt:after {
+  border-right-color: #fff;
+  top: 8px;
+  left: 12px;
+  border-left: 0;
+  border-top: 0;
+  margin-bottom: -10px;
+  margin-left: -20px;
+}
+.kTalkBox.left .kkodate {
+  margin-left: 6px;
+}
+
+.kTalkBox.active.right .kkotxt:after {
+  border-left-color: #fff;
+  top: 8px;
+  right: 12px;
+  border-right: 0;
+  border-top: 0;
+  margin-bottom: -10px;
+  margin-right: -20px;
+}
+.kTalkBox.right .kkodate {
+  margin-right: 6px;
+}
